--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,16 @@
 nixPkgs = ["nodejs_22", "python311", "python311Packages.pip"]
 
 [phases.install]
-cmds = ["npm ci"]
+cmds = [
+  "npm ci",
+  "npm install --prefix frontend --legacy-peer-deps"
+]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = [
+  "npm run build --prefix frontend",
+  "pip install -r backend/Chatbot/requirements.txt"
+]
 
 [start]
 cmd = "npm run start"
