--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,6 @@
 # Python virtual environment setup for chatbot dependencies
 [phases.setup]
-nixPkgs = ["nodejs_22", "python311", "python311Packages.pip", "python311Packages.virtualenv"]
+nixPkgs = ["nodejs_22", "python311", "python311Packages.pip", "python311Packages.virtualenv", "stdenv.cc.cc.lib"]
 
 [phases.install]
 cmds = [
