--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,9 @@
 # Python virtual environment setup for chatbot dependencies
 [phases.setup]
-nixPkgs = ["nodejs_22", "python311", "python311Packages.pip", "python311Packages.virtualenv", "gcc-unwrapped.lib"]
+nixPkgs = ["nodejs_22", "python311", "python311Packages.pip", "python311Packages.virtualenv", "stdenv.cc.cc.lib"]
+
+[variables]
+LD_LIBRARY_PATH = "/nix/store/*-gcc-*-lib/lib:$LD_LIBRARY_PATH"
 
 [phases.install]
 cmds = [
@@ -16,4 +19,4 @@ cmds = [
 ]
 
 [start]
-cmd = "export LD_LIBRARY_PATH=/nix/store/*-gcc-*-lib/lib:$LD_LIBRARY_PATH && . /opt/venv/bin/activate && npm run start"
+cmd = ". /opt/venv/bin/activate && npm run start"
