--- a/railway.toml
+++ b/railway.toml
@@ -2,4 +2,4 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "export LD_LIBRARY_PATH=/nix/store/*-gcc-*-lib/lib:$LD_LIBRARY_PATH && . /opt/venv/bin/activate && npm run start"
+startCommand = ". /opt/venv/bin/activate && npm run start"
