--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -12,11 +12,7 @@ cmds = [
 [phases.build]
 cmds = [
   "npm run build --prefix frontend",
-  ". /opt/venv/bin/activate && pip install -r backend/Chatbot/requirements.txt"
-]
-
-[phases.postBuild]
-cmds = [
+  ". /opt/venv/bin/activate && pip install -r backend/Chatbot/requirements.txt",
   "echo 'export LD_LIBRARY_PATH=$(dirname $(find /nix/store -name \"libstdc++.so.6\" 2>/dev/null | head -1)):$LD_LIBRARY_PATH' >> /opt/venv/bin/activate"
 ]
 
